--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ input[type="radio"] {
     scroll-snap-type: x mandatory;
     overscroll-behavior-y: contain;
     padding-top: 5px;
-    max-height: 1200px;
+    max-height: 1000px;
 }
 
 /*.pattern-selector-texture {*/
@@ -318,7 +318,7 @@ input[type="radio"] {
 
 #texture_img {
     margin: auto;
-    /*margin-top: 0px;*/
+    /*margin-top: 10px;*/
     height: 128px;
     width: 128px;
     /*background-position: center;*/
@@ -334,7 +334,7 @@ input[type="radio"] {
 }
 
 #texhint {
-    max-height: 225px;
+    max-height: 250px;
     grid-column: 1/3;
     /*grid-template-columns: 64px 64px;*/
     column-count: 2;
@@ -346,7 +346,7 @@ input[type="radio"] {
     border-top-width: 4px;
     border-top-style: solid;
     border-top-color: rgba(0, 0, 0, 0.2);
-    /*text-align: center;*/
+    text-align: center;
     line-height: 2em;
 }
 
@@ -358,6 +358,8 @@ input[type="radio"] {
 
 /* PHONES */
 @media (max-width: 500px) {
+
+
     .whitespace {
         grid-column: auto;
         height: 1px;
@@ -417,8 +419,8 @@ input[type="radio"] {
 
     #graft_img {
         background-position: center;
-        height: 64px;
-        width: 64px;
+        height: 128px;
+        width: 128px;
 
     }
 }
@@ -509,7 +511,7 @@ input[type="radio"] {
 
 
 .tooltip {
-    margin: auto;
+    /*margin: auto;*/
     position: relative;
     display: inline-block;
     border-bottom: 1px dotted black;
@@ -584,28 +586,28 @@ input[type=range][orient=vertical] {
     padding: 0 5px;
 }
 
-.prompt-square {
-    /*background-image: url('textures/banded.png');*/
-    /*background-position:center;
-    background-repeat:no-repeat;
-    background-size:cover;
-    */
-    /* some weird kludge to allow same width as height */
-    display: block;
-    --border-width: 4px;
-    border-style: solid;
-    box-sizing: border-box;
-    border-width: var(--border-width);
-    border-color: lightgray;
-    width: 100%;
-    /*height: 100%;*/
-    /*height: 0;*/
-    /*padding-right: 0%;*/
-    /*padding-left: 10%;*/
-    text-align: center;
-    font-size: 0.7vw;
-    scroll-snap-align: center;
-}
+/*.prompt-square {*/
+/*    !*background-image: url('textures/banded.png');*!*/
+/*    !*background-position:center;*/
+/*    background-repeat:no-repeat;*/
+/*    background-size:cover;*/
+/*    *!*/
+/*    !* some weird kludge to allow same width as height *!*/
+/*    display: block;*/
+/*    --border-width: 4px;*/
+/*    border-style: solid;*/
+/*    box-sizing: border-box;*/
+/*    border-width: var(--border-width);*/
+/*    border-color: lightgray;*/
+/*    width: 100%;*/
+/*    !*height: 100%;*!*/
+/*    !*height: 0;*!*/
+/*    !*padding-right: 0%;*!*/
+/*    !*padding-left: 10%;*!*/
+/*    text-align: center;*/
+/*    font-size: 0.7vw;*/
+/*    scroll-snap-align: center;*/
+/*}*/
 
 
 /*.prompt_center {*/
@@ -654,6 +656,7 @@ input[type=range][orient=vertical] {
 
 .canvas_container {
     position: relative;
+    width:100%;
 }
 
 #texture_hint {
